<resources>
    <string name="app_name">Cataas</string>
    <string name="title_action_bar">Generator kotów</string>

    <string name="step">1</string>
    <string name="zero">0</string>
    <string name="sixty">60</string>

    <string name="add_text">Dodaj tekst</string>
    <string name="error">Błąd połączenia</string>
    <string name="give_me_cat">DAJ MI KOTA</string>

    <string name="choose_tag">Wybierz tag</string>
    <string name="choose_filter">Wybierz filtr</string>
    <string name="choose_description">Opis</string>
    <string name="choose_color">Kolor</string>

    <string name="description_cat_photo">cat photo</string>
</resources>